<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wxConditions"
    android:background="@drawable/gradient_drawable">

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/txtDate"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtCurrentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/txtTime"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtCurrentTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtCurrentTime"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="134dp"
        android:layout_marginRight="134dp"
        android:gravity="center"
        android:text="@string/txtTemp"
        android:textColor="@color/white"
        android:textSize="75sp" />

    <TextView
        android:id="@+id/txtWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtCurrentTemp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:text="@string/txtWaring"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TableRow
        android:id="@+id/rowTitles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginBottom="278dp">

        <TextView
            android:id="@+id/txtHumidityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="32dp"
            android:text="@string/txtHumidity"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtLowTempTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="87dp"
            android:layout_marginLeft="81dp"
            android:layout_marginTop="30dp"

            android:text="@string/txtLowTemp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtHighTempTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="87dp"
            android:layout_marginLeft="87dp"
            android:layout_marginTop="31dp"
            android:text="@string/txtHighTemp"
            android:textColor="@color/white" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginBottom="125dp">

        <TextView
            android:id="@+id/txtCurrentHumidity"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="72dp"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="9dp"
            android:text="@string/txtCurrentHumidity"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtCurrentLowTemp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="105dp"
            android:layout_marginLeft="192dp"
            android:layout_marginTop="9dp"
            android:text="@string/txtCurrentLow"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtCurrentHighTemp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"

            android:layout_marginStart="87dp"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="10dp"
            android:text="@string/txtCurrentHigh"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </TableRow>

    <TableRow
        android:id="@+id/rowImages"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginBottom="160dp">

        <ImageView
            android:id="@+id/imgDuePoint"
            android:layout_width="98dp"
            android:layout_height="87dp"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="6dp"
            android:contentDescription="TODO"
            android:src="@drawable/duepoint" />

        <ImageView
            android:id="@+id/imgLowTemp"
            android:layout_width="103dp"
            android:layout_height="86dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="25dp"

            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/lowtemp" />

        <ImageView
            android:id="@+id/imgHighTemp"
            android:layout_width="99dp"
            android:layout_height="86dp"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="9dp"
            android:src="@drawable/hightemp" />
    </TableRow>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav"
        android:background="?android:attr/windowBackground"/>

</RelativeLayout>