<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wxConditions"
    android:background="@drawable/gradient_drawable">

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:gravity="center"
        android:text="@string/txtDate"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtCurrentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/txtTime"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/txtCurrentTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtCurrentTime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:text="@string/txtTemp"
        android:textColor="@color/white"
        android:textSize="50dp" />

    <TextView
        android:id="@+id/txtWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtCurrentTemp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:text="@string/txtWaring"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <FrameLayout
        android:id="@+id/fragment_Container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomNav"
        android:layout_below="@id/txtWarning"/>


    <TextView
        android:id="@+id/txtBlackBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="_________________________________________________"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_below="@id/txtWarning"/>
    <TextView
        android:id="@+id/hourByHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtBlackBar"/>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav"
        android:background="?android:attr/windowBackground"/>

</RelativeLayout>